@@ -1,3 +1,9 @@
+2014-01-29  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/58674
+	* pt.c (instantiate_template_1): Check for error_mark_node the second
+	argument too.
+
 2014-01-29  Jason Merrill  <jason@redhat.com>
 
 	PR c++/59916
